--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.11"
 
 services:
-  app:
+  project:
     build:
       context: .
       dockerfile: Dockerfile
@@ -10,6 +10,6 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./app:/app
+      - ./project:/project
     command: >
       sh -c "python3 manage.py runserver 0.0.0.0:8000"
