--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,26 @@ services:
     volumes:
       - ./project:/project
     command: >
-      sh -c "python3 manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DB_HOST=database
+      - DB_NAME=recipeproject
+      - DB_USER=george
+      - DB_PASSWORD=password
+    depends_on:
+      - database
+  
+  database:
+    image: postgres:16-alpine
+    volumes:
+      - dev-db-data:/data/postgres
+    ports:
+      - "5433:5432"
+    environment:
+      - POSTGRES_DB=recipeproject
+      - POSTGRES_USER=george
+      - POSTGRES_PASSWORD=password
+      - PGDATA= /data/postgres
+
+volumes:
+  dev-db-data:
