--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -5,6 +5,7 @@ environs==11.0.0
 flake8==7.0.0
 marshmallow==3.21.1
 packaging==24.0
+psycopg2==2.9.9
 python-dotenv==1.0.1
 pytz==2024.1
 sqlparse==0.4.4
