--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework==3.14.0
 environs==11.0.0
 marshmallow==3.21.1
 packaging==24.0
+psycopg2==2.9.9
 python-dotenv==1.0.1
 pytz==2024.1
 sqlparse==0.4.4
