database testing config-TDD

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 Django==5.0.3, <5.1
 djangorestframework==3.14.0
 environs==11.0.0
+flake8==7.0.0
 marshmallow==3.21.1
 packaging==24.0
 psycopg2==2.9.9
