--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,9 @@ services:
     volumes:
       - ./project:/project
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py wait_for_db && 
+              python manage.py migrate &&
+              python manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=database
       - DB_NAME=recipeproject
@@ -20,6 +22,7 @@ services:
       - DB_PASSWORD=password
     depends_on:
       - database
+    restart: unless-stopped
   
   database:
     image: postgres:16-alpine
