--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,11 +1,19 @@
 asgiref==3.7.2
-Django==5.0.3, <5.1
+attrs==23.2.0
+Django==5.0.3
 djangorestframework==3.14.0
+drf-spectacular==0.27.1
 environs==11.0.0
-flake8==7.0.0
+inflection==0.5.1
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 marshmallow==3.21.1
 packaging==24.0
 psycopg2==2.9.9
 python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.1
+referencing==0.34.0
+rpds-py==0.18.0
 sqlparse==0.4.4
+uritemplate==4.1.1
